# dados-abertos

./: .gitignore  docker-compose.dev.yml  docker-compose.yml
ckan/: Dockerfile
ckan/docker-entrypoint.d/: 01_setup_datapusher.sh
ckanext-newtemplate/: pyproject.toml  setup.cfg  test.ini
ckanext-newtemplate/ckanext/newtemplate/: plugin.py
ckanext-newtemplate/ckanext/newtemplate/assets/: webassets.yml
ckanext-newtemplate/ckanext/newtemplate/templates/home/: index.html
ckanext-newtemplate/ckanext/newtemplate/tests/: test_plugin.py
js/home/: index.js
js/package/: read.js  search.js
src/ckanext-newtemplate/: test.ini
src_extensions/.cookiecutter_replay/: ckan_extension.json
src_extensions/ckanext-newtemplate/: MANIFEST.in  README.md  setup.py
src_extensions/ckanext-newtemplate/.github/workflows/: test.yml
src_extensions/ckanext-newtemplate/ckanext/newtemplate/: plugin.py
src_extensions/ckanext-newtemplate/ckanext/newtemplate/assets/: script.js
styles/: base.css  footer.css  nav.css
styles/group/: read.css
styles/home/: cards.css  index.css
styles/package/read/: read.css
styles/package/search/: search.css
styles/snippets/: facet_list.css  package_list_new.css  pagination.css
templates/: base.html  footer.html  header.html  header_bkp.html
templates/group/: index.html  read.html  read_bkp.html
templates/home/: index.html
templates/home/snippets/: about_text.html
templates/package/: read_base.html  search.html
templates/package/snippets/: resources_list_new.html
templates/snippets/: facet_list.html  package_list_new.html
(+4 files in other folders)
